<resources>
    <string name="app_name">KingdomOfCurling</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="facebook_app_id">323542258468432</string>
    <string name="fb_login_protocol_scheme">fb323542258468432</string>


    <!-- Menu -->
    <string name="navi_1">홈</string>
    <string name="navi_2">컬링대관</string>
    <string name="navi_3">카메라</string>
    <string name="navi_4">관광정보</string>
    <string name="navi_5">쿠폰샵</string>


    <string name="main_menu_1">컬링장 예약</string>
    <string name="main_menu_2">컬링포인트 체험</string>
    <string name="main_menu_3">내쿠폰 보기</string>
    <string name="main_menu_4">컬링 게임</string>

    <string name="main_ppl_loading">산수유축제</string>
    <string name="main_ppl_sub_loading">경북 의성군 사곡면 화전리(산수유 꽃피는 마을)</string>

    <string name="reservation">예약하기</string>
    <string name="reserve_schedule_title">예약 일정</string>
    <string name="reserve_schedule_hint">일정 선택</string>
    <string name="start_time_title">시작 시간</string>
    <string name="start_time_hint">일정 선택</string>
    <string name="hope_time_title">희망 사용 시간</string>
    <string name="hope_time">0 시간</string>
    <string name="reserve_man_title">예약 인원</string>
    <string name="reserve_man">0 명</string>
    <string name="reserve_provision_1">개인장비가 있습니다.</string>
    <string name="reserve_provision_2">다른 체크 항목 표시</string>


    <string name="curling_booking">컬링대관</string>
    <string name="booking_menu_1">컬링장 예약 조회</string>
    <string name="booking_menu_2">예약 확인</string>
    <string name="booking_menu_3">예약 가이드</string>

    <string name="travel_info_title">관광정보</string>
    <string name="travel_info_menu_1">주요 관광지 보기</string>
    <string name="travel_info_menu_2">쿠폰 사용처 보기</string>


    <string name="travel_detail_info_btn1">촬영하기</string>
    <string name="travel_detail_info_btn2">위치보기</string>
    <string name="travel_detail_info_btn3">오디오</string>

    <string name="booking_tab_info1">시간</string>
    <string name="booking_tab_info2">상황</string>
    <string name="booking_tab_info3">예약여부</string>
    <string name="booking_tab_info4">예약현황</string>

    <string name="impossible">불가</string>
    <string name="possible">가능</string>
    <string name="remain">예약</string>
    <string name="soldout">매진</string>


    <string name="intro_login_email">이메일로 시작</string>
    <string name="intro_login_facebook">facebook으로 시작</string>
    <string name="intro_login_naver">네이버 아이디로 시작</string>

    <string name="login_email_title">이메일로 시작하기</string>
    <string name="login_email_id_title">ID</string>
    <string name="login_email_id_hint">이메일을 입력하세요</string>
    <string name="login_email_pw_title">PASS WORD</string>
    <string name="login_email_pw_hint">비밀번호를 입력하세요</string>
    <string name="login_button_enter">로그인</string>
    <string name="login_find_id">아이디 찾기</string>
    <string name="login_find_password">비밀번호 찾기</string>
    <string name="login_email_invalid">* 가입되지 않은 사용자입니다.</string>

    <string name="login_password_find">비밀번호 찾기</string>
    <string name="login_password_find_desc">비밀번호가 기억나지 않으시나요?</string>
    <string name="login_password_find_desc_detail">가입시 메일주소를 입력하시면 본인인증을 통해\n비밀번호를 새로 발급 할 수 있습니다.</string>
    <string name="login_password_find_email">아이디(메일주소) 입력</string>
    <string name="login_password_find_email_hint">메일주소 입력</string>
    <string name="login_password_find_email_alert">* 기존에 가입된 회원이 아닙니다.</string>

    <string name="login_reset_password">비밀번호 입력</string>
    <string name="login_reset_auth_success">인증이 완료되었습니다.</string>
    <string name="login_reset_auth_success1">신규 비밀번호</string>
    <string name="login_reset_auth_success2">를 입력해주세요.</string>
    <string name="reset_password">신규 비밀번호</string>
    <string name="reset_password_hint">비밀번호 8자 이상 입력</string>
    <string name="reset_password_hint2">비밀번호 재확인</string>
    <string name="reset_password_alert">* 이미 가입된 메일주소 입니다.</string>


    <string name="coupon_menu_title">쿠폰샵</string>
    <string name="coupon_menu_1">음식점 및 카페</string>
    <string name="coupon_menu_2">기타 관광 상품</string>
    <string name="coupon_menu_3">쿠폰 사용법 안내</string>

    <string name="check_resv_title">예약 확인</string>
    <string name="check_resv_tab1">날짜</string>
    <string name="check_resv_tab2">시작시간</string>
    <string name="check_resv_tab3">사용시간</string>
    <string name="check_resv_tab4">인원</string>
    <string name="check_resv_tab5">예약현황</string>


    <string name="my_coupon_title">내 쿠폰 보기</string>

    <string name="provision_title">회원가입</string>
    <string name="provision_check_all">약관 전체 동의</string>
    <string name="provision_see"><u>보기</u></string>
    <string name="provision_1">컬링의성 이용약관</string>
    <string name="provision_2">개인정보 수집 및 이용에 대한 안내</string>
    <string name="provision_agree">동의</string>

    <string name="provision_detail_title">이용약관</string>


    <string name="login_sms_name">본인인증</string>
    <string name="login_name_hint">이름</string>
    <string name="mdn_hint">휴대폰 번호</string>
    <string name="sms_send">발송</string>
    <string name="sms_auth_num_hint">인증번호 (10분 동안 유효)</string>
    <string name="invail_sms_num">* 잘못된 인증번호 입니다.</string>
    <string name="sms_auth_next">다음</string>
    <string name="my_info_edit_sms_auth_next">다음</string>
    <string name="my_info_edit_complete">완료</string>
    <string name="my_info_edit">변경</string>
    <string name="my_info_pw_edit_invaild_password">* 기존 비밀번호를 확인해 주시기 바랍니다.</string>
    <string name="my_info_pw_edit_hint">비밀번호 입력</string>
    <string name="my_info_pw_edit__hint2">비밀번호 확인</string>
    <string name="my_info_pw_edit_new_pw">신규 비밀번호</string>


    <string name="user_info_id">아이디(메일주소)</string>
    <string name="user_info_id_hint">메일주소 입력</string>
    <string name="user_info_id_invalid">* 이미 등록된 아이디 입니다.</string>
    <string name="user_info_pw">비밀번호</string>
    <string name="user_info_pw_hint">비밀번호 8자 이상 입력</string>
    <string name="user_info_pw_2_hint">비밀번호 재확인</string>
    <string name="user_info_pw_invalid">* 비밀번호가 일치 하지 않습니다.</string>
    <string name="user_info_next">회원가입</string>

    <string name="coupon_1000p">1000포인트 쿠폰</string>
    <string name="coupon_3000p">3000포인트 쿠폰</string>
    <string name="coupon_5000p">5000포인트 쿠폰</string>
    <string name="coupon_enable_string">사용가능</string>
    <string name="coupon_disable_string">사용완료</string>


    <string name="coupon_buy">구매하기</string>
    <string name="coupon_store_name">교환처</string>
    <string name="coupon_store_mdn">문의처</string>
</resources>
