<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.login.EmailLoginFragment">
    <LinearLayout
        android:background="@color/white"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textStyle="bold"
            android:text="@string/login_email_id_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:fontFamily="sans-serif"
            android:textSize="13dp"
            android:paddingLeft="10dp"
            android:hint="@string/login_email_id_hint"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:layout_marginTop="5dp"
            android:background="@drawable/textview_common"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
        <TextView
            android:visibility="gone"
            android:text="이메일 형식이 아닙니다."
            android:textSize="13dp"
            android:fontFamily="sans-serif"
            android:id="@+id/loginEmailAlert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:text="@string/login_email_pw_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:fontFamily="sans-serif"
            android:textSize="13dp"
            android:paddingLeft="10dp"
            android:hint="@string/login_email_pw_hint"
            android:maxLines="1"
            android:inputType="textPassword"
            android:layout_marginTop="5dp"
            android:background="@drawable/textview_common"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:visibility="gone"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textSize="11dp"
            android:text="@string/login_email_invalid"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/logonButtonEmail"
            android:text="@string/login_button_enter"
            android:textSize="13dp"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:layout_marginTop="50dp"
            android:background="@drawable/btn_common_theme"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:paddingRight="20dp"
                android:gravity="end"
                android:text="@string/login_find_id"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <ImageView
                android:background="@color/common_bound_line"
                android:layout_width="1dp"
                android:layout_height="match_parent" />
            <TextView
                android:paddingLeft="20dp"
                android:text="@string/login_find_password"
                android:gravity="start"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>