<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.login.ResetPasswordFragment">
    <LinearLayout
        android:layout_marginTop="27dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="27dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textStyle="bold"
            android:text="@string/login_reset_auth_success"
            android:textColor="@color/find_password_normal"
            android:textSize="13dp"
            android:fontFamily="sans-serif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:text="@string/login_reset_auth_success1"
                android:textColor="@color/find_password_foc"
                android:textSize="13dp"
                android:fontFamily="sans-serif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/login_reset_auth_success2"
                android:textColor="@color/find_password_normal"
                android:textSize="13dp"
                android:fontFamily="sans-serif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <TextView
            android:layout_marginTop="30dp"
            android:text="@string/reset_password"
            android:textColor="@color/find_password_normal"
            android:textSize="13dp"
            android:fontFamily="sans-serif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/resetPassword1"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:background="@drawable/textview_common"
            android:hint="@string/reset_password_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/resetPassword2"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:background="@drawable/textview_common"
            android:hint="@string/reset_password_hint2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:visibility="gone"
            android:text="@string/reset_password_alert"
            android:textColor="@color/colorAccent"
            android:textSize="13dp"
            android:fontFamily="sans-serif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



        <Space
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/btnResetPasswordNext"
            android:textSize="18dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:text="@string/sms_auth_next"
            android:textColor="@color/white"
            android:background="@color/top_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</FrameLayout>