<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.join.UserInfoFragment">
    <LinearLayout
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_marginTop="2dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/top_title"
            android:textStyle="bold"
            android:text="@string/user_info_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:textColorHint="@color/top_title"
            android:id="@+id/user_info_id"
            android:fontFamily="sans-serif"
            android:textSize="15dp"
            android:paddingLeft="10dp"
            android:hint="@string/user_info_id_hint"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:layout_marginTop="5dp"
            android:background="@drawable/textview_common"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:visibility="gone"
            android:id="@+id/user_info_id_invalid"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/colorAccent"
            android:text="@string/user_info_id_invalid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/top_title"
            android:textStyle="bold"
            android:text="@string/user_info_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:textColorHint="@color/top_title"
            android:id="@+id/user_info_pw"
            android:fontFamily="sans-serif"
            android:textSize="15dp"
            android:paddingLeft="10dp"
            android:hint="@string/user_info_pw_hint"
            android:maxLines="1"
            android:inputType="textPassword"
            android:layout_marginTop="5dp"
            android:background="@drawable/textview_common"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <EditText
            android:textColorHint="@color/top_title"
            android:id="@+id/user_info_pw_2"
            android:fontFamily="sans-serif"
            android:textSize="15dp"
            android:paddingLeft="10dp"
            android:hint="@string/user_info_pw_2_hint"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:layout_marginTop="5dp"
            android:background="@drawable/textview_common"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
        <TextView
            android:visibility="gone"
            android:id="@+id/user_info_pw_invalid"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/colorAccent"
            android:text="@string/user_info_pw_invalid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Space
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/user_info_next_button"
            android:textSize="18dp"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
            android:text="@string/user_info_next"
            android:background="@drawable/btn_common_theme"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </LinearLayout>
</FrameLayout>