<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.login.FindPasswordFragment">
    <LinearLayout
        android:layout_marginTop="27dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="27dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/login_password_find_desc"
            android:textColor="@color/find_password_foc"
            android:textSize="13dp"
            android:fontFamily="sans-serif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/login_password_find_desc_detail"
            android:textColor="@color/find_password_normal"
            android:textSize="13dp"
            android:fontFamily="sans-serif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="30dp"
            android:text="@string/login_password_find_email"
            android:textColor="@color/find_password_normal"
            android:textSize="13dp"
            android:fontFamily="sans-serif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etPasswordEmailAddress"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:background="@drawable/textview_common"
            android:hint="@string/login_password_find_email_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:visibility="gone"
            android:text="@string/login_password_find_email_alert"
            android:textColor="@color/colorAccent"
            android:textSize="13dp"
            android:fontFamily="sans-serif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



        <Space
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/btnFindPasswordNext"
            android:textSize="18dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:text="@string/sms_auth_next"
            android:textColor="@color/white"
            android:background="@color/top_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</FrameLayout>