<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.join.SmsAuthFragment">

    <LinearLayout
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:fontFamily="sans-serif"
            android:textColor="@color/top_title"
            android:textStyle="bold"
            android:text="@string/login_sms_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:paddingTop="10dp"
            android:textColorHint="@color/top_title"
            android:id="@+id/sma_auth_name"
            android:fontFamily="sans-serif"
            android:textSize="15dp"
            android:paddingLeft="10dp"
            android:hint="@string/login_name_hint"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:layout_marginTop="5dp"
            android:background="@drawable/textview_common"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:textColorHint="@color/top_title"
                android:id="@+id/mdm_number"
                android:fontFamily="sans-serif"
                android:textSize="15dp"
                android:paddingLeft="10dp"
                android:hint="@string/mdn_hint"
                android:maxLines="1"
                android:inputType="number"
                android:background="@drawable/textview_common"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="40dp" />

            <Button
                android:textSize="15dp"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"
                android:text="@string/sms_send"
                android:id="@+id/send_sms_auth_number"
                android:layout_marginLeft="10dp"
                android:background="@drawable/btn_common_theme"
                android:layout_width="80dp"
                android:layout_height="40dp" />
        </LinearLayout>


        <EditText
            android:textColorHint="@color/top_title"
            android:id="@+id/sms_auth_number"
            android:fontFamily="sans-serif"
            android:textSize="15dp"
            android:paddingLeft="10dp"
            android:hint="@string/sms_auth_num_hint"
            android:maxLines="1"
            android:inputType="number"
            android:layout_marginTop="10dp"
            android:background="@drawable/textview_common"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
        <TextView
            android:id="@+id/sms_auth_invalid"
            android:layout_marginTop="10dp"
            android:text="@string/invail_sms_num"
            android:textColor="@color/colorAccent"
            android:textSize="13dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Space
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp" />
        <Button
            android:id="@+id/sms_auth_next_button"
            android:enabled="false"
            android:textSize="18dp"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
            android:text="@string/sms_auth_next"
            android:background="@drawable/btn_common_theme"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </LinearLayout>



</FrameLayout>