<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.booking.CheckResvFragment">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:fontFamily="sans-serif"
            android:id="@+id/check_resv_date"
            android:textAlignment="center"
            android:background="@color/top_title"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="13dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:gravity="center_vertical"
                android:background="@color/booking_tab_color"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textAlignment="center"
                    android:textSize="13dp"
                    android:fontFamily="sans-serif"
                    android:textStyle="normal"
                    android:textColor="@color/white"
                    android:text="@string/check_resv_tab1"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textAlignment="center"
                    android:textSize="13dp"
                    android:fontFamily="sans-serif"
                    android:textStyle="normal"
                    android:textColor="@color/white"
                    android:text="@string/check_resv_tab2"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textAlignment="center"
                    android:textSize="13dp"
                    android:fontFamily="sans-serif"
                    android:textStyle="normal"
                    android:textColor="@color/white"
                    android:text="@string/check_resv_tab3"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textAlignment="center"
                    android:textSize="13dp"
                    android:fontFamily="sans-serif"
                    android:textStyle="normal"
                    android:textColor="@color/white"
                    android:text="@string/check_resv_tab4"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textAlignment="center"
                    android:textSize="13dp"
                    android:fontFamily="sans-serif"
                    android:textStyle="normal"
                    android:textColor="@color/white"
                    android:text="@string/check_resv_tab5"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/checkResvList"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>